--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-stripe==7.8.0
-requests==2.31.0
-python-multipart==0.0.6
-jinja2==3.1.2
-cryptography>=41.0.0
-pydantic
+fastapi>=0.111
+uvicorn[standard]>=0.30
+stripe>=10.0.0
+requests>=2.31
+jinja2>=3.1
+pydantic>=2.7
+python-multipart>=0.0.9
